protocols/tests/identities/identity_d1/slicing_invalid.out
error: Invalid slice operation: [15:31] on width 32
   ┌─ identities/identity_d1/identity_d1.prot:47:13
   │
47 │   assert_eq(s[15:31], DUT.s[15:31]); // illegal slices!
   │             ^ Invalid slice operation: [15:31] on width 32

